added elements to manipulatie in html and added css

--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel = "stylesheet" type= "text/css" href="assests/style.css"
+    <link rel="stylesheet" href ="assests/style.css"/>
 </head>
 <body>
+    <h2 id="status">dbfkjbsjkfbskj</h2>
+    <div class= "quizz">bsdvdjbkdsvksdbvsdk</div>
     <script src = "assets/script.js"></script>
 </body>
 </html>
