added function to render questions and answers and trac question numbeer only answers are showing working on showing questions

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href ="assests/style.css"/>
 </head>
 <body>
-    <h2 id="status">dbfkjbsjkfbskj</h2>
-    <div class= "quizz">bsdvdjbkdsvksdbvsdk</div>
-    <script src = "assets/script.js"></script>
+    <h2 id="status"></h2>
+    <div id= "quizz"></div>
+    <script src = "assests/script.js"></script>
 </body>
 </html>
