working on answer checking function added time variable will add time function next

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Code Quiz</title>
     <link rel="stylesheet" href ="assests/style.css"/>
 </head>
 <body>
@@ -13,6 +13,7 @@
         <h1> Click the button to start your quiz!</h1>
         <p>Answer the questions correctly. If you answer incorectly time will be deducted. You will start with 70 secs. Save your highscore at the end with your inials!</p>
         <button id="startButton">Click to start!</button>
+        <div class = "timer"></div>
     </div>
     <script src = "assests/script.js"></script>
 </body>
